Update gitignore to ignore credential files

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # User-specific files
+translation_credentials.json
+credentials.json
+token.pickle
+
+
 *.rsuser
 *.suo
 *.user
